# ReflectionExample

./: CMakeLists.txt  vcpkg.json
src/: EnumToString.cpp  EqualOverload.cpp  ImGui.cpp  IterateEnumerators.cpp  PrintOverloadForMemberAndBase.cpp  UniversalPrint.h  VariableConsole.cpp  main.cpp
